# Shadow-Warden-AI

./: .coderabbit.yaml  .env.example  .env.smb.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  .vercelignore  404.html  AUDIT_REPORT_2026-07-10.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Hook.md  LICENSE  MODERNIZATION_PLAN.md  Makefile  PLAN.md  PRODUCT.md  PROGRAM.md  README.md  ROADMAP.md  Rule.md  Rull.md  STRATEGY.md  Skill.md  TODO.list  accessibility-widget.js  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.smb.yml  docker-compose.yml  index.html  install-smb.ps1  install-smb.sh  llms.txt  middleware.ts  (+10 more)
.claude/: settings.json
.github/: SECURITY.md  dependabot.yml  pip-audit-ignore
.streamlit/: config.toml
_astro/: ConsoleSection.astro_astro_type_script_index_0_lang.ClOiCr6F.js  agentic.astro_astro_type_script_index_0_lang.BKU6D6B9.js  agentic.astro_astro_type_script_index_1_lang.CDedy4_C.js  agentic.astro_astro_type_script_index_1_lang.CHdwqjfJ.js  agentic@_@astro.BtIW-4Kx.css  community.astro_astro_type_script_index_0_lang.BzKAonwH.js  community.astro_astro_type_script_index_0_lang.CIjlVRPR.js  community.astro_astro_type_script_index_0_lang.CUHDVays.js  community.astro_astro_type_script_index_0_lang.ZpH0EpaM.js  community@_@astro.B1Wtvitw.css  community@_@astro.BBi_u9HM.css  community@_@astro.BSBbXbkD.css  community@_@astro.BcMvWDIk.css  community@_@astro.BvP1sSyA.css  community@_@astro.CP82g0sX.css  community@_@astro.DrXJ85wg.css  doc@_@astro.CiBtrKV8.css  global.B1AZJ_K9.css  global.B2OXc2zE.css  global.B6qy63hW.css  global.BFGi0d1g.css  global.BOmYeNHH.css  global.BQrixAxL.css  global.BSedSlN0.css  global.Bm6HaBsx.css  global.BxaP83RU.css  global.CBzsuFpP.css  global.CUIfwJfz.css  global.CVSuN_pt.css  global.D2eX3VdC.css  global.D5vWHcLn.css  global.DDQsKVfI.css  global.DPmmK3BE.css  global.DRz6nhZo.css  global.DhdxChoz.css  global.LVAPSc-r.css  global._MKjOcSq.css  global.dKvJjYlx.css  global.kln4Gi4L.css  global.m5W5w51d.css  (+26 more)
account/: index.html
admin/: Dockerfile  app.py
agentic/: index.html
agents/: code-reviewer.md  marketplace-code-reviewer.md  marketplace-security-auditor.md  security-auditor.md
analytics/: Dockerfile  index.html  main.py
app/: Dockerfile  README.md  main.py  requirements.txt
browser-extension/: INSTALL.md  PRIVACY_POLICY.md  STORE_LISTING.md  background.js  content.js  generate_icons.py  managed_storage_schema.json  manifest.json
business-community/: index.html
commands/: marketplace-status.md  test-m2m.md
community/: index.html
contact/: index.html
cyber-security/: index.html
dashboard/: Dockerfile  index.html  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
data/: evolution_dataset.jsonl  init.sql
deploy/: Invoke-WardenProvision.ps1  chrome-managed-storage.json  deploy-chrome-gpo.ps1  deploy-google-workspace.md  hetzner.sh  invoke-warden-provision.sh
doc/: index.html
docker/: Caddyfile  Caddyfile.dev
docs/: Hook.md  Plan.md  README.md  api-reference.md  api.md  architecture-overview.md  architecture.md  browser-sandbox-hardening.md  changelog.md  cloudflare-waf.md  community-creation-guide.md  compliance-guide.md  contributing.md  data-layer-analysis.md  deep-engineering.md  deployment-guide.md  deployment-hardening.md  developer-guide.md  dpia.md  executive-pitch.md  fail-open-inventory.md  fintech-architecture.md  fintech-development-plan.md  fintech-grade-commerce-plan.md  index.md  integration-research-tunnel-sac-marketplace-gsam.md  launch-post.md  lemon-squeezy-response.md  licensing-posture.md  marketplace-guide.md  master-kickoff-plan.md  modernization-plan-v8.md  money-mutation-inventory.md  multi-region.md  nemotron-integration-plan.md  order-model-consolidation-plan.md  pipeline-anatomy.md  pre-production-plan.md  prod-secret-hardening-runbook.md  product-pillars.md  (+18 more)
enterprise-guide/: index.html
fraud-score/: index.html
goodbye/: index.html
grafana/: loki-config.yaml  prometheus.yml  promtail.yml
gtm/: apollo_scraper.py  cold_outreach_sequence.md  demo_script.md  one_pager.md  warmup_validator.py
hooks/: block-sensitive-writes.sh  security-review.sh  validate-marketplace.sh
incident/: index.html
k6/: README.md  load_test.js  smoke_test.js
k8s/: hpa.yaml
landing/: 404.html  accessibility-widget.js  agents.html  benchmark.html  billing.html  checkout.html  contact.html  dashboard.html  docs.html  early-access.html  enterprise-guide-v29.html  enterprise-settings.html  fraud-score.html  fraudscore.html  index.html  integration-guide.html  login.html  ot-security.html  privacy.html  qa.html  red-team-cert.html  refund.html  reset-password.html  roadmap.html  robots.txt  security.html  session.js  settings.html  sitemap-0.xml  sitemap-index.xml  soc.html  terms.html  vercel.json  warden-v47.html
legal/: DPA.md  RoPA.md  SOC2_Roadmap.md
login/: index.html
logout/: index.html
marketplace/: index.html
memory/: decisions.md  progress.md  project-context.md
mobile/: App.tsx  package.json  tsconfig.json
obsidian-plugin/: esbuild.config.mjs  main.ts  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
playground/: index.html
portal/: .gitignore  Dockerfile  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
price/: index.html
pricing/: index.html
refund/: index.html
roadmap/: index.html
rules/: api-conventions.md  code-style.md  frontend-maintenance.md  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/shadow_warden/: __init__.py  client.py  errors.py  models.py
sdk/python/tests/: test_client.py
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: basic_agent.py
sdks/python/shadow_warden/: __init__.py  client.py  otel_plugin.py
sdks/python/shadow_warden_sdk/: __init__.py  agent.py  client.py
sdks/python/tests/: test_sdk.py
warden_sdk/: __init__.py  client.py  exceptions.py  models.py  pyproject.toml
(+1574 files in other folders)
