[project]
name = "shadow-warden-ai"
version = "5.3.0"
description = "AI security gateway — jailbreak detection, PII/secret redaction, STIX 2.1 audit chain, SMB AI governance suite, business intelligence, post-quantum cryptography, sovereign cloud routing, and self-improving rules powered by Claude Opus"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "Proprietary" }
keywords = ["ai-safety", "llm", "security", "jailbreak", "prompt-injection", "gdpr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "anthropic>=0.40.0",
    "playwright>=1.44.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "stripe>=8.0.0",
    "bcrypt>=4.0.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "mutmut>=2.4.0",
]
langchain = [
    "langchain-core>=0.1.0",
    "httpx>=0.27.0",
]
smb = [
    # SMB AI Governance Suite (BL-22/23/24, CM-35/36/37/38, IN-25)
    # All modules use stdlib SQLite — no extra deps required.
    # Install for the complete governance stack docs + type stubs:
    "shadow-warden-ai",
]
bi = [
    # Business Intelligence Module (CM-39)
    # Pure-Python OLS + benchmarking — no numpy/scipy required at runtime.
    "shadow-warden-ai",
]
pqc = [
    # Post-Quantum Cryptography (liboqs required for ML-DSA-65 + ML-KEM-768)
    # Falls back to classical Ed25519/X25519 if not installed.
    "liboqs-python>=0.9.0",
]
sovereign = [
    # Sovereign AI Cloud routing — no extra deps beyond core.
    "shadow-warden-ai",
]
otel = [
    # OpenTelemetry distributed tracing
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
]
full = [
    # All optional features bundled
    "shadow-warden-ai[langchain,pqc,otel]",
    "liboqs-python>=0.9.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "langchain-core>=0.1.0",
]

[project.scripts]
warden-gateway   = "warden.main:main"
warden-dashboard = "warden.analytics.dashboard:main"
warden-hash      = "warden.analytics.auth:__main__"

[project.urls]
Homepage   = "https://github.com/zborrman/Shadow-Warden-AI"
Repository = "https://github.com/zborrman/Shadow-Warden-AI"
Issues     = "https://github.com/zborrman/Shadow-Warden-AI/issues"

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["warden*", "analytics*"]

# ── Ruff (linter) ─────────────────────────────────────────────────────────────

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select  = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore  = ["E501", "B008"]   # E501=line length (ruff handles it), B008=FastAPI Depends()

[tool.ruff.lint.isort]
known-first-party = ["warden", "analytics"]

[tool.ruff.lint.per-file-ignores]
"warden/tests/*" = ["S101"]                    # assert is expected in tests
"warden/analytics/dashboard.py"     = ["C408"]    # Plotly uses dict() kwargs by convention
"warden/analytics/msp_dashboard.py" = ["C408"]    # Plotly uses dict() kwargs by convention

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version         = "3.11"
ignore_missing_imports = true
strict                 = false

# ── Coverage ──────────────────────────────────────────────────────────────────
# Omit files that are UI layers or require live external services to exercise:
#   dashboard / auth    — Streamlit UI; not unit-testable without a running browser
#   siem                — Splunk / Elastic endpoints unavailable in CI
#   langchain_callback  — requires langchain runtime
#   browser             — Playwright headful browser (CI has no display)
#   openai_proxy        — proxy to OpenAI; requires a live backend

[tool.coverage.run]
omit = [
    "warden/analytics/dashboard.py",
    "warden/analytics/auth.py",
    "warden/analytics/siem.py",
    "warden/analytics/msp_dashboard.py",
    "warden/integrations/langchain_callback.py",
    "warden/integrations/nemo_bridge.py",
    "warden/integrations/taxii.py",
    "warden/tools/browser.py",
    "warden/openai_proxy.py",
    "warden/agent/tools.py",
    "warden/agent/master.py",
    "warden/agent/scheduler.py",
    "warden/agent/healer.py",
    "warden/portal_router.py",
    "warden/shadow_ai/discovery.py",
    "warden/workers/probe_worker.py",
    "warden/workers/reaper.py",
    "warden/workers/settings.py",
    "warden/workers/cve_scanner.py",
    "warden/workers/content_filter.py",
    "warden/workers/settings_watcher.py",
    "warden/db/migrations/*",
    "warden/brain/faiss_index.py",
    "warden/agent/sova.py",
    "warden/analytics/accessibility.py",
    "warden/audio_redactor.py",
    "warden/api/monitor.py",
    "warden/blockchain/chain_connector.py",
    "warden/blockchain/ipfs_storage.py",
    "warden/blockchain/mandate_contract.py",
    "warden/api/fido_auth.py",
    "warden/semantic_layer/api.py",
    "warden/analytics/pages/14_Agentic_Commerce.py",
    "warden/analytics/pages/15_Semantic_Layer.py",
    "warden/analytics/pages/16_Settings.py",
    "warden/workers/weekly_report.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths    = ["warden/tests", "warden/m2m_store/tests", "warden/business_intelligence/tests"]
addopts      = "-v --tb=short --strict-markers --cov=warden --cov-report=term-missing --cov-fail-under=80"
markers      = [
    "adversarial: adversarial corpus tests (may be slow)",
    "slow: tests that load the ML model",
    "integration: end-to-end FastAPI tests",
    "chaos: chaos/fault-injection tests",
]
asyncio_mode = "auto"

# ── Mutmut (mutation testing) ─────────────────────────────────────────────────
# Targets: the two core safety modules — everything else is glue.
# Runner: fast unit tests only (no ML model, no slow fixtures).
# Threshold: < 10 surviving mutants = acceptable.
# Run: mutmut run  (Linux / WSL / CI only — not supported on native Windows)

[tool.mutmut]
paths_to_mutate = "warden/secret_redactor.py,warden/semantic_guard.py"
runner          = "python -m pytest warden/tests/test_secret_redactor.py warden/tests/test_semantic_guard.py -x -q --no-header --no-cov"
tests_dir       = "warden/tests/"
