[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadow-warden-client"
version = "0.5.0"
description = "Python SDK for the Shadow Warden AI security gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
keywords = ["ai", "security", "dlp", "pii", "jailbreak", "llm", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage   = "https://shadowwarden.ai"
Repository = "https://github.com/your-org/shadow-warden-ai"
Issues     = "https://github.com/your-org/shadow-warden-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["shadow_warden"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths   = ["tests"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
