[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "shadow-warden-sdk"
version         = "1.0.0"
description     = "Official Python SDK for Shadow Warden AI — zero-trust AI security gateway"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
authors         = [{ name = "Shadow Warden AI", email = "sdk@shadow-warden-ai.com" }]
keywords        = ["ai", "security", "gateway", "llm", "mandate", "commerce"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
async = ["anyio>=4.0"]
dev   = ["pytest>=7", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.urls]
Homepage      = "https://shadow-warden-ai.com"
Documentation = "https://docs.shadow-warden-ai.com"
Repository    = "https://github.com/zborrman/Shadow-Warden-AI"
"Bug Tracker" = "https://github.com/zborrman/Shadow-Warden-AI/issues"

[tool.hatch.build.targets.wheel]
packages = ["shadow_warden_sdk"]
